# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2005-05-29(Sun) 07:06:55 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weba.nb : use logger's message store

	* ndk/logger.rb, ndk/config.rb : some changes for weba

	* nadokarc : add vim pragma and FilenameEncoding setting

	* ndk/client.rb, ndk/server.rb : fix logger relaod process

	* ndk/server_state.rb : add channel_raw_names


2005-05-29(Sun) 03:35:28 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : add BackLogBot as default bot


2005-05-29(Sun) 03:31:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : add @rc read accessor

	* nadokarc, ndk/config.rb : support default setting_name
	as rc file name


2005-05-29(Sun) 03:04:53 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : support filename encoding(utf-8)


2005-05-29(Sun) 02:49:12 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server_state.rb, ndk/config.rb, ndk/logger.rb :
	new logging scheme is added

	* nadokarc : add indent and log detail setting

	* plugins/backlogbot.nb : use logger's message store


2005-05-27(Fri) 21:32:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : comment out Quit_Message and change
	Default_log, Log_TimeFormat setting

	* ndk/client.rb : fix welcome message

	* ndk/config.rb : change Default_log, System_log path,
	Log_TimeFormat and add Log_MessageFormat.


2005-05-26(Thu) 22:11:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autodumpbot.nb, plugins/sixamobot.nb :
	change copyright year


2005-05-26(Thu) 22:07:15 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : fix a bug


2005-05-26(Thu) 21:51:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : change default quit message


2005-05-26(Thu) 21:45:49 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix ACL comment


2005-05-26(Thu) 21:42:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fix configuration example


2005-05-26(Thu) 21:24:50 +0900  Koichi Sasada  <ko1@atdot.net>

	* log/.deleteme : remove

