@@ -2,6 +2,13 @@
 # $Id$ 
 #
 
+2005-05-29(Sun) 12:53:48 +0900  Koichi Sasada  <ko1@atdot.net>
+
+	* plugins/weba.nb : set default password on
+
+	* ndk/logger.rb : fix nick logging
+
+
 2005-05-29(Sun) 07:06:55 +0900  Koichi Sasada  <ko1@atdot.net>
 
 	* plugins/weba.nb : use logger's message store
